--- a/arc/testing/restart/2_restart_rate/restart.yml
+++ b/arc/testing/restart/2_restart_rate/restart.yml
@@ -23,7 +23,8 @@ irc_level:
 job_memory: 14
 job_types:
   bde: false
-  conformers: false
+  conf_opt: false
+  conf_sp: false
   fine: false
   freq: true
   irc: false
@@ -55,7 +56,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: true
+      conf_opt: true
+      conf_sp: false
       fine: false
       freq: true
       irc: true
@@ -80,7 +82,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: true
+      conf_opt: true
+      conf_sp: false
       fine: false
       freq: true
       irc: true
@@ -105,7 +108,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: true
+      conf_opt: true
+      conf_sp: false
       fine: false
       freq: true
       irc: true
@@ -130,7 +134,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: true
+      conf_opt: true
+      conf_sp: false
       fine: false
       freq: true
       irc: true
@@ -155,7 +160,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false
       fine: false
       freq: true
       irc: true
