--- a/arc/testing/restart/5_TS1/restart.yml
+++ b/arc/testing/restart/5_TS1/restart.yml
@@ -24,7 +24,8 @@ irc_level:
   software: gaussian
 job_types:
   bde: false
-  conformers: true
+  conf_opt: true
+  conf_sp: false
   fine: true
   freq: true
   irc: true
@@ -48,7 +49,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false
       fine: false
       freq: false
       irc: false
@@ -73,7 +75,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false
       fine: false
       freq: false
       irc: false
@@ -98,7 +101,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false      
       fine: false
       freq: false
       irc: false
@@ -123,7 +127,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false      
       fine: false
       freq: false
       irc: false
@@ -148,7 +153,8 @@ output:
     job_types:
       bde: true
       composite: false
-      conformers: false
+      conf_opt: false
+      conf_sp: false      
       fine: true
       freq: true
       irc: true
